--- a/styles/blocks/milestones/__arrow/milestones__arrow.css
+++ b/styles/blocks/milestones/__arrow/milestones__arrow.css
@@ -1,22 +1,22 @@
 .milestones__arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-
-  flex: 0 0 26px;
-  display: block;
+    display: block;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    flex: 0 0 26px;
+    cursor: pointer;
 }
 
 .milestones__arrow_left {
-  left: calc(-41px - 26px);
+    left: calc(-41px);
 }
 
 .milestones__arrow_right {
-  right: calc(-41px - 26px);
+    right: calc(-41px);
 }
 
 @media screen and (max-width: 768px) {
-  .milestones__arrow {
-    display: none;
-  }
+    .milestones__arrow {
+        display: none;
+    }
 }
