--- a/styles/blocks/milestones/milestones.css
+++ b/styles/blocks/milestones/milestones.css
@@ -1,13 +1,14 @@
 .milestones {
-  max-width: 1160px;
-  margin: 0 auto 120px auto;
-  padding: 0 20px;
+    position: relative;
+    max-width: 1160px;
+    margin: 0 auto 120px auto;
+    padding: 0 20px;
 }
 
 @media screen and (max-width: 768px) {
-  .milestones {
-    max-width: 375px;
-    margin: 0 auto 28px auto;
-    padding: 0 21px;
-  }
+    .milestones {
+        max-width: 375px;
+        margin: 0 auto 28px auto;
+        padding: 0 21px;
+    }
 }
