--- a/styles/blocks/future-card/future-card.css
+++ b/styles/blocks/future-card/future-card.css
@@ -16,7 +16,7 @@
 
 .future-card_little {
   align-items: center;
-  padding: 35px 75px 35px 75px;
+  padding: 35px 70px;
 }
 
 @media screen and (max-width: 768px) {
