--- a/components/filter/filter-menu.module.css
+++ b/components/filter/filter-menu.module.css
@@ -3,12 +3,11 @@
     overflow: scroll;
     display: flex;
     flex-direction: column;
-    padding-bottom: 30px;
     position: relative;
 }
 
 .filtersList {
-    margin: 0 0 50px;
+    margin: 0 0 30px;
     padding: 0;
     list-style: none;
 }
@@ -51,8 +50,11 @@
     margin-top: auto;
     bottom: 0;
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: #fff;
+    padding-top: 10px;
 }
 
 .submit {
@@ -69,6 +71,10 @@
 
 .submit:active {
     transform: scale(0.95);
+}
+
+.submit.red {
+    background: #fb3f4a;
 }
 
 .optionLabel {
