--- a/components/slider-menu/slider-menu.module.css
+++ b/components/slider-menu/slider-menu.module.css
@@ -48,5 +48,7 @@
     font-family: var(--font-montserrat);
     font-size: 8px;
     line-height: 1.4;
-    margin: auto 30px 20px 30px;
+    background-color: #fff;
+    padding: 15px 22px;
+    margin: 0;
 }
