--- a/pages/order/order-ui.module.css
+++ b/pages/order/order-ui.module.css
@@ -59,6 +59,7 @@
 
 .fileInput {
     width: 100%;
+    font-family: var(--font-montserrat);
     border: 2px dashed #c0cad1;
     border-radius: 5px;
     background-color: #eceff1;
@@ -82,6 +83,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: var(--font-montserrat);
 }
 
 .fileInputIcon {
@@ -103,6 +105,7 @@
 }
 
 .fileInputBtn {
+    font-family: var(--font-montserrat);
     font-size: 0.8em;
     color: #fff;
     background-color: #02569c;
