--- a/pages/order/order.module.css
+++ b/pages/order/order.module.css
@@ -179,10 +179,11 @@
 }
 
 .fieldsBlockLabel {
-    color: rgb(2, 86, 156, 0.9);
+    font-family: var(--font-montserrat);
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 120%;
+    color: rgb(2, 86, 156, 1);
 }
 
 .fieldsBlockContent {
