--- a/components/product/latest-offers/latest-offers.module.css
+++ b/components/product/latest-offers/latest-offers.module.css
@@ -121,8 +121,7 @@
     font-size: 12px;
     line-height: 1.4;
     font-weight: bold;
-    margin: 0;
-    margin-top: 30px;
+    margin: 30px 0 0;
   }
 
   .currentOffers__tableHeaderCell {
@@ -154,5 +153,11 @@
 
   .headerCell_grade {
     min-width: 70px;
+  }
+
+  .analogs__headerCell {
+    padding: 0 5px 10px;
+    font-size: 11px;
+    text-align: left;
   }
 }
