--- a/styles/blocks/events/__button/events__button.css
+++ b/styles/blocks/events/__button/events__button.css
@@ -1,24 +1,24 @@
 .events_button {
-  align-self: center;
-  width: 327px;
-  box-sizing: border-box;
-  padding: 15px 31px;
-  background: var(--p-orange-accent);
-  border: none;
-  border-radius: 5px;
-  font-size: 100%;
-  line-height: 21px;
-  font-family: var(--font-montserrat);
-  font-weight: 500;
-  color: #fff;
+    align-self: center;
+    width: 327px;
+    padding: 15px 31px;
+    background: var(--p-orange-accent);
+    border: none;
+    border-radius: 5px;
+    font-size: 100%;
+    line-height: 21px;
+    font-family: var(--font-montserrat);
+    font-weight: 500;
+    color: #fff;
+    text-align: center;
 }
 
 .events_button:hover {
-  color: #fff;
+    color: #fff;
 }
 
 @media screen and (max-width: 768px) {
-  .events_button {
-    display: none;
-  }
+    .events_button {
+        display: none;
+    }
 }
