--- a/styles/blocks/footer/__link/footer__link.css
+++ b/styles/blocks/footer/__link/footer__link.css
@@ -1,5 +1,5 @@
 .footer__link,
 .footer__link:hover {
-  color: #fff;
-  text-decoration: none;
+    color: rgba(255, 255, 255, 0.9);
+    text-decoration: none;
 }
