--- a/components/filter/filter-controls.module.css
+++ b/components/filter/filter-controls.module.css
@@ -6,6 +6,10 @@
     margin-bottom: 20px;
 }
 
+.searchForm {
+    height: 20px;
+}
+
 .searchForm_active {
     flex-grow: 1;
     display: flex;
@@ -39,7 +43,6 @@
     visibility: hidden;
     position: absolute;
     width: 0;
-
     transition: 300ms ease;
 }
 
@@ -63,4 +66,14 @@
     height: 20px;
     background: url('/images/icon-search.svg') no-repeat center;
     background-size: 15px;
+    margin: 0;
+}
+
+.clearFiltersBtn {
+    width: 14px;
+    height: 14px;
+    background-image: url('/images/ui/cancel-icon-grey.svg');
+    background-size: cover;
+    cursor: pointer;
+    margin-right: 5px;
 }
