--- a/components/order/navigation/order-navigation.module.css
+++ b/components/order/navigation/order-navigation.module.css
@@ -55,15 +55,18 @@
     color: #e0e0e0;
     width: 100%;
 }
+
 .stepName {
-    margin: 10px 0 0;
     padding-left: 10px;
     font-family: var(--font-montserrat);
     font-weight: 500;
     font-size: 12px;
     line-height: 15px;
     color: #333333;
+    margin: 7px 0 0;
+    padding: 0;
 }
+
 .nextButton {
     width: 27px;
     height: 27px;
