--- a/components/organisms/Home/ProductList/ProductList.module.css
+++ b/components/organisms/Home/ProductList/ProductList.module.css
@@ -1,25 +1,33 @@
+.noProducts {
+    font-family: var(--font-montserrat);
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 32px;
+    color: var(--grey-default);
+}
+
 .showMoreBtn {
-  background-color: transparent;
-  border: none;
-  color: #02569c;
-  font-family: var(--font-montserrat);
-  font-size: 18px;
-  line-height: 22px;
-  cursor: pointer;
-  transition: all 300ms ease;
+    background-color: transparent;
+    border: none;
+    color: #02569c;
+    font-family: var(--font-montserrat);
+    font-size: 18px;
+    line-height: 22px;
+    cursor: pointer;
+    transition: all 300ms ease;
 }
 
 .showMoreBtn:hover {
-  opacity: 0.6;
+    opacity: 0.6;
 }
 
 .showMoreBtn:active {
-  opacity: 0.3;
+    opacity: 0.3;
 }
 
 @media screen and (max-width: 768px) {
-  .showMoreBtn {
-    font-size: 9px;
-    line-height: 11px;
-  }
+    .showMoreBtn {
+        font-size: 9px;
+        line-height: 11px;
+    }
 }
