--- a/styles/blocks/products/__search-submit/products__search-submit.css
+++ b/styles/blocks/products/__search-submit/products__search-submit.css
@@ -1,10 +1,9 @@
 .products__search-submit {
-    padding: 0;
+    width: 60px;
+    height: 50px;
+    background-color: #fff;
     border: 1px solid var(--font-non-active);
     border-left: none;
     border-radius: 0 3px 3px 0;
-    width: 60px;
-    height: 45px;
-    background: url('/images/icon-search.svg') no-repeat center;
-    background-size: 22px;
+    padding: 10px;
 }
